force-app/main/default/objects/Deal_Clone_One__c/Deal_Clone_One__c.object-meta.xml
<CustomObject>
    <fullName>Deal_Clone_One__c</fullName>
    <label>Deal</label>
    <pluralLabel>Deals</pluralLabel>
    <nameField>
        <label>Deal Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>