force-app/main/default/objects/Deal_Clone_One__c/fields/Acquisition_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Close_Date__c</fullName>
    <label>Acquisition Close Date</label>
    <type>Date</type>
</CustomField>