force-app/main/default/objects/Deal_Clone_One__c/fields/Acquisition_Type__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Type__c</fullName>
    <label>Acquisition Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>Tuck-In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>