force-app/main/default/objects/Deal_Clone_One__c/fields/Actual_Cumulative_Hours__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cumulative_Hours__c</fullName>
    <description>Sum of Total Previous Cumulative Hours and Qualified hours for this week</description>
    <formula>IF(
AND( W_C_Monday_1__c &gt;= TODAY() , W_C_Monday_1__c &lt;= TODAY() + 7 ) ,
Hours_1__c ,
0 )

+

IF(
AND(
W_C_Monday_2__c &gt;= TODAY() , W_C_Monday_2__c &lt;= TODAY() + 7 ) ,
Hours_2__c ,
0 )

+

IF(
AND(
W_C_Monday_3__c &gt;= TODAY() , W_C_Monday_3__c &lt;= TODAY() + 7 ) ,
Hours_3__c ,
0 )

+

IF(
AND(
W_C_Monday_4__c &gt;= TODAY() , W_C_Monday_4__c &lt;= TODAY() + 7 ) ,
Hours_4__c ,
0 )

+ 

Total_Cumulative_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Cumulative Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>