force-app/main/default/objects/Deal_Clone_One__c/fields/Add_Note__c.field-meta.xml
<CustomField>
    <fullName>Add_Note__c</fullName>
    <formula>&quot;Add Note&quot;</formula>
    <label>Add Note</label>
    <type>Text</type>
</CustomField>