force-app/main/default/objects/Deal_Clone_One__c/fields/All_In_Cost__c.field-meta.xml
<CustomField>
    <fullName>All_In_Cost__c</fullName>
    <label>All-In Cost (MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>