force-app/main/default/objects/Deal_Clone_One__c/fields/Allocation_Account_3__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Account_3__c</fullName>
    <description>PR-2113</description>
    <label>Allocation Account 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GA</fullName>
            </value>
            <value>
                <fullName>KROX</fullName>
            </value>
            <value>
                <fullName>KREF</fullName>
            </value>
            <value>
                <fullName>KREST</fullName>
            </value>
            <value>
                <fullName>RECOP</fullName>
            </value>
            <value>
                <fullName>RESTAC</fullName>
            </value>
            <value>
                <fullName>KREOCS II</fullName>
            </value>
            <value>
                <fullName>KCORE</fullName>
            </value>
            <value>
                <fullName>KROX II</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>