force-app/main/default/objects/Deal_Clone_One__c/fields/Allocation_Percentage_1__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Percentage_1__c</fullName>
    <description>Allocation Percentage 1</description>
    <label>Allocation Percentage 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>