force-app/main/default/objects/Deal_Clone_One__c/fields/Allocation_Percentage_2__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Percentage_2__c</fullName>
    <description>PR-2113</description>
    <label>Allocation Percentage 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>