force-app/main/default/objects/Deal_Clone_One__c/fields/Allocation_Summary_REC__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Summary_REC__c</fullName>
    <label>Allocation Summary REC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>