force-app/main/default/objects/Deal_Clone_One__c/fields/Americas_Office_Count__c.field-meta.xml
<CustomField>
    <fullName>Americas_Office_Count__c</fullName>
    <label>Americas Office Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>