force-app/main/default/objects/Deal_Clone_One__c/fields/Approval_Level_REC__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level_REC__c</fullName>
    <label>IC Approval Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>