force-app/main/default/objects/Deal_Clone_One__c/fields/Approved_Budget_EUR__c.field-meta.xml
<CustomField>
    <fullName>Approved_Budget_EUR__c</fullName>
    <inlineHelpText>Please enter the budget approved for this deal.</inlineHelpText>
    <label>Approved Budget (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>