force-app/main/default/objects/Deal_Clone_One__c/fields/AR__c.field-meta.xml
<CustomField>
    <fullName>AR__c</fullName>
    <inlineHelpText>Only applicable when Target Execution = Repo / Financing Facility</inlineHelpText>
    <label>Advance Rate (%)</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>