force-app/main/default/objects/Deal_Clone_One__c/fields/As_Is_LTV__c.field-meta.xml
<CustomField>
    <fullName>As_Is_LTV__c</fullName>
    <label>KKR As-Is LTV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>