force-app/main/default/objects/Deal_Clone_One__c/fields/Asia_Meeting_Override__c.field-meta.xml
<CustomField>
    <fullName>Asia_Meeting_Override__c</fullName>
    <description>PR - 2057 - Used for reporting in Asia only</description>
    <label>Asia Meeting Override</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asia PE IC</fullName>
            </value>
            <value>
                <fullName>Asia PE Partners</fullName>
            </value>
            <value>
                <fullName>Asia NGT Deep Dive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>