force-app/main/default/objects/Deal_Clone_One__c/fields/Asking_Price_REE__c.field-meta.xml
<CustomField>
    <fullName>Asking_Price_REE__c</fullName>
    <inlineHelpText>Purchase Price (MM) if closed</inlineHelpText>
    <label>Asking Price (MM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>