force-app/main/default/objects/Deal_Clone_One__c/fields/Associate_s__c.field-meta.xml
<CustomField>
    <fullName>Associate_s__c</fullName>
    <label>Associate(s)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>