force-app/main/default/objects/Deal_Clone_One__c/fields/Associates_Initials__c.field-meta.xml
<CustomField>
    <fullName>Associates_Initials__c</fullName>
    <label>Associates (Initials)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>