force-app/main/default/objects/Deal_Clone_One__c/fields/Ave_COC_REE__c.field-meta.xml
<CustomField>
    <fullName>Ave_COC_REE__c</fullName>
    <label>Ave COC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>