force-app/main/default/objects/Deal_Clone_One__c/fields/Award_Price_REE__c.field-meta.xml
<CustomField>
    <fullName>Award_Price_REE__c</fullName>
    <label>Award Price (MM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>