force-app/main/default/objects/Deal_Clone_One__c/fields/Awarded_Stage_REE__c.field-meta.xml
<CustomField>
    <fullName>Awarded_Stage_REE__c</fullName>
    <inlineHelpText>Under Exclusivity: Any deal the deal team has under exclusivity 
Under Contract / Soft Deposit: Any deal for which we have signed a PSA and have made a refundable deposit
Under Contract / Hard Deposit: Any deal for which we have signed a PSA and have made a non-refundable deposit
Closed: Any deal the deal team has acquired</inlineHelpText>
    <label>Awarded Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status_REE__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under Exclusivity</fullName>
            </value>
            <value>
                <fullName>Under Contract / Soft Deposit</fullName>
            </value>
            <value>
                <fullName>Under Contract / Hard Deposit</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>