force-app/main/default/objects/Deal_Clone_One__c/fields/Banker_Primary__c.field-meta.xml
<CustomField>
    <fullName>Banker_Primary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Banker</label>
    <referenceTo>Banker__c</referenceTo>
    <relationshipLabel>Deals</relationshipLabel>
    <relationshipName>Deals_Clone</relationshipName>
    <type>Lookup</type>
</CustomField>