force-app/main/default/objects/Deal_Clone_One__c/fields/Banker_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Banker_Reporting__c</fullName>
    <formula>IF(Banker_Primary__c &lt;&gt; &quot;&quot;, Banker_Primary__r.Name, Banker__r.Name) + IF( Banker_2__c &lt;&gt; &quot;&quot; , &quot;, &quot; + Banker_2__r.Name , &quot;&quot; )</formula>
    <label>Banker (Reporting)</label>
    <type>Text</type>
</CustomField>