force-app/main/default/objects/Deal_Clone_One__c/fields/Banker_Second__c.field-meta.xml
<CustomField>
    <fullName>Banker_Second__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Banker</label>
    <referenceTo>Banker__c</referenceTo>
    <relationshipLabel>Deals (Secondary Banker)</relationshipLabel>
    <relationshipName>Secondary_Deals_Clone</relationshipName>
    <type>Lookup</type>
</CustomField>