force-app/main/default/objects/Deal_Clone_One__c/fields/Base_Rate_Index__c.field-meta.xml
<CustomField>
    <fullName>Base_Rate_Index__c</fullName>
    <label>Base Rate Index</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EURIBOR</fullName>
            </value>
            <value>
                <fullName>SONIA</fullName>
            </value>
            <value>
                <fullName>SARON</fullName>
            </value>
            <value>
                <fullName>STIBOR</fullName>
            </value>
            <value>
                <fullName>EONIA</fullName>
            </value>
            <value>
                <fullName>CIBOR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>