force-app/main/default/objects/Deal_Clone_One__c/fields/Basin__c.field-meta.xml
<CustomField>
    <fullName>Basin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Basin/Area</label>
    <referenceTo>Basin_Area__c</referenceTo>
    <relationshipLabel>Deals</relationshipLabel>
    <relationshipName>Deals_Clone</relationshipName>
    <type>Lookup</type>
</CustomField>