force-app/main/default/objects/Deal_Clone_One__c/fields/BD_REC__c.field-meta.xml
<CustomField>
    <fullName>BD_REC__c</fullName>
    <label>Broker / Direct</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>