force-app/main/default/objects/Deal_Clone_One__c/fields/Bid_Date__c.field-meta.xml
<CustomField>
    <fullName>Bid_Date__c</fullName>
    <inlineHelpText>Used as &apos;Timing&apos; on the CRG Pipeline</inlineHelpText>
    <label>Bid Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>