force-app/main/default/objects/Deal_Clone_One__c/fields/Bid_Date_first_populated__c.field-meta.xml
<CustomField>
    <fullName>Bid_Date_first_populated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for GI workflow to populate Company.Check-in Date when Deal.Bid Date is populated for the first time.</description>
    <label>Bid Date first populated</label>
    <type>Checkbox</type>
</CustomField>