force-app/main/default/objects/Deal_Clone_One__c/fields/Bid_Date_GI__c.field-meta.xml
<CustomField>
    <fullName>Bid_Date_GI__c</fullName>
    <label>Bid Date</label>
    <type>Date</type>
</CustomField>