force-app/main/default/objects/Deal_Clone_One__c/fields/bold_emea_report__c.field-meta.xml
<CustomField>
    <fullName>bold_emea_report__c</fullName>
    <description>If a deal stage has changed in last 7 days or if the deal was created in the last 7 days</description>
    <formula>OR( TODAY() - eu_deal_stage_upd_date__c &lt;= 7, TODAY() - DATEVALUE(CreatedDate) &lt;= 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bold on EMEA Deal Team Report</label>
    <type>Checkbox</type>
</CustomField>