force-app/main/default/objects/Deal_Clone_One__c/fields/BP_REC__c.field-meta.xml
<CustomField>
    <fullName>BP_REC__c</fullName>
    <label>Business Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stabilized</fullName>
            </value>
            <value>
                <fullName>Light Value Add</fullName>
            </value>
            <value>
                <fullName>Value Add</fullName>
            </value>
            <value>
                <fullName>Opportunistic</fullName>
            </value>
            <value>
                <fullName>CMBS</fullName>
            </value>
            <value>
                <fullName>Senior Secured</fullName>
            </value>
            <value>
                <fullName>Senior Unsecured</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
                <isActive>false</isActive>
                <label>Core</label>
            </value>
            <value>
                <fullName>Core Plus</fullName>
                <isActive>false</isActive>
                <label>Core Plus</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>