force-app/main/default/objects/Deal_Clone_One__c/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <label>Broker</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Ackman-Ziff</fullName>
            </value>
            <value>
                <fullName>Argentic</fullName>
            </value>
            <value>
                <fullName>Avison Young</fullName>
            </value>
            <value>
                <fullName>Bank of America</fullName>
            </value>
            <value>
                <fullName>Barclays</fullName>
            </value>
            <value>
                <fullName>Benefit Street</fullName>
            </value>
            <value>
                <fullName>Berkadia</fullName>
            </value>
            <value>
                <fullName>Bellwether</fullName>
            </value>
            <value>
                <fullName>BMO</fullName>
            </value>
            <value>
                <fullName>C&amp;W</fullName>
            </value>
            <value>
                <fullName>CBRE</fullName>
            </value>
            <value>
                <fullName>CCRE</fullName>
            </value>
            <value>
                <fullName>CIBC</fullName>
            </value>
            <value>
                <fullName>Citi</fullName>
            </value>
            <value>
                <fullName>Colliers</fullName>
            </value>
            <value>
                <fullName>Credit Suisse</fullName>
            </value>
            <value>
                <fullName>Deutsche Bank</fullName>
            </value>
            <value>
                <fullName>Eastdil</fullName>
            </value>
            <value>
                <fullName>Estreich</fullName>
            </value>
            <value>
                <fullName>Goldman Sachs</fullName>
            </value>
            <value>
                <fullName>Grandbridge</fullName>
            </value>
            <value>
                <fullName>JLL</fullName>
            </value>
            <value>
                <fullName>JP Morgan</fullName>
            </value>
            <value>
                <fullName>KeyBank</fullName>
            </value>
            <value>
                <fullName>Ladder Capital</fullName>
            </value>
            <value>
                <fullName>LMF Commercial</fullName>
            </value>
            <value>
                <fullName>Meridian</fullName>
            </value>
            <value>
                <fullName>Morgan Stanley</fullName>
            </value>
            <value>
                <fullName>Natixis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>