force-app/main/default/objects/Deal_Clone_One__c/fields/Broker_Office__c.field-meta.xml
<CustomField>
    <fullName>Broker_Office__c</fullName>
    <label>Broker Office</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Broker__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ATL</fullName>
            </value>
            <value>
                <fullName>AUS</fullName>
            </value>
            <value>
                <fullName>BOS</fullName>
            </value>
            <value>
                <fullName>CHI</fullName>
            </value>
            <value>
                <fullName>CLT</fullName>
            </value>
            <value>
                <fullName>DAL</fullName>
            </value>
            <value>
                <fullName>DC</fullName>
            </value>
            <value>
                <fullName>DEN</fullName>
            </value>
            <value>
                <fullName>HOU</fullName>
            </value>
            <value>
                <fullName>LA</fullName>
            </value>
            <value>
                <fullName>MIA</fullName>
            </value>
            <value>
                <fullName>MSP</fullName>
            </value>
            <value>
                <fullName>NAS</fullName>
            </value>
            <value>
                <fullName>NYC</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>OC</fullName>
            </value>
            <value>
                <fullName>ORL</fullName>
            </value>
            <value>
                <fullName>PHI</fullName>
            </value>
            <value>
                <fullName>PHX</fullName>
            </value>
            <value>
                <fullName>PIT</fullName>
            </value>
            <value>
                <fullName>POR</fullName>
            </value>
            <value>
                <fullName>SD</fullName>
            </value>
            <value>
                <fullName>SEA</fullName>
            </value>
            <value>
                <fullName>SF</fullName>
            </value>
            <value>
                <fullName>TPA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Benelux</fullName>
            </value>
            <value>
                <fullName>Denmark</fullName>
            </value>
            <value>
                <fullName>Finland</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>