force-app/main/default/objects/Deal_Clone_One__c/fields/Broker_REC__c.field-meta.xml
<CustomField>
    <fullName>Broker_REC__c</fullName>
    <label>Broker (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>