force-app/main/default/objects/Deal_Clone_One__c/fields/Broker_REE__c.field-meta.xml
<CustomField>
    <fullName>Broker_REE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Broker</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deals (Broker)</relationshipLabel>
    <relationshipName>Broker_RE_Equity_Clone</relationshipName>
    <type>Lookup</type>
</CustomField>