force-app/main/default/objects/Deal_Clone_One__c/fields/BU__c.field-meta.xml
<CustomField>
    <fullName>BU__c</fullName>
    <defaultValue>IF(
    AND(
        $RecordType.DeveloperName = &quot;Global_Impact&quot;,
        ISPICKVAL($User.Office_Region__c, &quot;Americas&quot;)
    ),
    &quot;AMPE-Impact&quot;,
    IF(
        AND(
            $RecordType.DeveloperName = &quot;Global_Impact&quot;,
            ISPICKVAL($User.Office_Region__c, &quot;EMEA&quot;)
        ),
        &quot;Eur-Impact&quot;,
        IF(
            AND(
                $RecordType.DeveloperName = &quot;NGT - Asia&quot;,
                ISPICKVAL($User.Office_Region__c, &quot;Asia&quot;)
            ),
            &quot;Asia NGT&quot;,
            IF(
                AND(
                    $RecordType.DeveloperName = &quot;Global_Impact&quot;,
                    ISPICKVAL($User.Office_Region__c, &quot;Asia&quot;)
                ),
                &quot;Asia-Impact&quot;,
                IF(
                    AND(
                        $User.Primary_Team__c = &quot;Industry Team - FIG&quot;,
                        ISPICKVAL($User.Office_Region__c, &quot;Americas&quot;)
                    ),
                    &quot;AMPE&quot;,
                    IF(
                        
                        $RecordType.DeveloperName = &quot;Health_Care_Growth&quot;
                        
                    ,
                    &quot;Healthcare Strategic Growth&quot;,
                    null
                    )
                )
            )
        )
    )
)</defaultValue>
    <inlineHelpText>Required for JYB/SCN Weekly Update</inlineHelpText>
    <label>Business</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AMPE</fullName>
            </value>
            <value>
                <fullName>Euro PE</fullName>
            </value>
            <value>
                <fullName>Asia PE</fullName>
            </value>
            <value>
                <fullName>Public toe-holds</fullName>
            </value>
            <value>
                <fullName>Asia NGT</fullName>
            </value>
            <value>
                <fullName>NGT</fullName>
            </value>
            <value>
                <fullName>Healthcare Strategic Growth</fullName>
                <label>Health Care Strategic Growth</label>
            </value>
            <value>
                <fullName>Healthcare Royalty and Income</fullName>
                <label>Health Care Royalty and Income</label>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>Infrastructure - Core</fullName>
            </value>
            <value>
                <fullName>Real Estate Equity</fullName>
            </value>
            <value>
                <fullName>Real Estate Credit</fullName>
            </value>
            <value>
                <fullName>AMPE-Core</fullName>
            </value>
            <value>
                <fullName>Eur-Core</fullName>
            </value>
            <value>
                <fullName>Asia-Core</fullName>
            </value>
            <value>
                <fullName>AMPE-Impact</fullName>
            </value>
            <value>
                <fullName>Eur-Impact</fullName>
            </value>
            <value>
                <fullName>Asia-Impact</fullName>
            </value>
            <value>
                <fullName>Balance Sheet</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Global Impact</fullName>
            </value>
            <value>
                <fullName>NBFC</fullName>
            </value>
            <value>
                <fullName>Mezzanine</fullName>
            </value>
            <value>
                <fullName>Strategic Investments Group</fullName>
            </value>
            <value>
                <fullName>Hedge Fund</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>AMPE - Middle Market</fullName>
            </value>
            <value>
                <fullName>Asia Climate</fullName>
            </value>
            <value>
                <fullName>Americas + EMEA Climate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>